# Snake-Game

./: .travis.yml  CMakeLists.txt  LICENSE  README  README.md
source/: CMakeLists.txt  arena.cpp  arena.hpp  colorgrid.cpp  colorgrid.hpp  food.cpp  food.hpp  game.cpp  game.hpp  main.cpp  point.cpp  point.hpp  snake.cpp  snake.hpp
tests/: CMakeLists.txt  arena_test.cpp  food_test.cpp  snake_test.cpp
